Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-2690

[C++] Plasma does not follow style conventions for variable and function names

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 0.10.0
    • C++

    Description

      See discussion in https://github.com/apache/arrow/pull/2031. We should make a pass through Plasma and rename functions and variables to conform with the rest of the codebase

      Attachments

        Issue Links

          Activity

            People

              wesm Wes McKinney
              wesm Wes McKinney
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 2h 10m
                  2h 10m