ARROW-2690: [Plasma] Use uniform function names in public APIs in Plasma. Add namespace around Flatbuffers

I made a pass over Plasma to make the function names more uniform in the style; let me know your comments. It was a little bit painful.

I also wanted to be more explicit about what parts of the Flatbuffers protocol are leaking into the public API. Still `flatbuffers/flatbuffers.h` is leaking, but this is a step in containing things a bit.

Author: Wes McKinney <wesm+git@apache.org>

Closes #2242 from wesm/ARROW-2690 and squashes the following commits:

6d694ca0 <Wes McKinney> Rename some more internal functions
fc66f533 <Wes McKinney> Use more distinguishable namespace alias than flatbuf
1bb90c32 <Wes McKinney> Use uniform function names in public APIs in Plasma. Add namespace around Flatbuffers