cpp/src/plasma/plasma.cc
@@ -24,6 +24,8 @@
 #include "plasma/common.h"
 #include "plasma/protocol.h"
 
+namespace fb = plasma::flatbuf;
+
 namespace plasma {
 
 extern "C" {
@@ -37,7 +39,7 @@ ObjectTableEntry::~ObjectTableEntry() {
   pointer = nullptr;
 }
 
-int warn_if_sigpipe(int status, int client_sock) {
+int WarnIfSigpipe(int status, int client_sock) {
   if (status >= 0) {
     return 0;
   }
@@ -62,9 +64,9 @@ int warn_if_sigpipe(int status, int client_sock) {
  * @return The object info buffer. It is the caller's responsibility to free
  *         this buffer with "delete" after it has been used.
  */
-std::unique_ptr<uint8_t[]> create_object_info_buffer(ObjectInfoT* object_info) {
+std::unique_ptr<uint8_t[]> CreateObjectInfoBuffer(fb::ObjectInfoT* object_info) {
   flatbuffers::FlatBufferBuilder fbb;
-  auto message = CreateObjectInfo(fbb, object_info);
+  auto message = fb::CreateObjectInfo(fbb, object_info);
   fbb.Finish(message);
   auto notification =
       std::unique_ptr<uint8_t[]>(new uint8_t[sizeof(int64_t) + fbb.GetSize()]);
@@ -73,8 +75,8 @@ std::unique_ptr<uint8_t[]> create_object_info_buffer(ObjectInfoT* object_info) {
   return notification;
 }
 
-ObjectTableEntry* get_object_table_entry(PlasmaStoreInfo* store_info,
-                                         const ObjectID& object_id) {
+ObjectTableEntry* GetObjectTableEntry(PlasmaStoreInfo* store_info,
+                                      const ObjectID& object_id) {
   auto it = store_info->objects.find(object_id);
   if (it == store_info->objects.end()) {
     return NULL;
